// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with auth error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ?Get started                                                                                                         │
│                                                                                                                      │
│  How would you like to authenticate for this project?                                                                │
│                                                                                                                      │
│  (selected) Login   (not selected) Use Gemi(not selected)   (not selected) AWS Bedrock   (not selected) OpenAI       │
│  with Google        API Key                Vertex AI        (Claude models)              Compatible APIs             │
│                                                                                                                      │
│  Something went wrong                                                                                                │
│                                                                                                                      │
│  (Use Enter to select)                                                                                               │
│                                                                                                                      │
│  Terms of Services and Privacy Notice for Gemini CLI                                                                 │
│                                                                                                                      │
│  https://github.com/google-gemini/gemini-cli/blob/main/docs/tos-privacy.md                                           │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ?Get started                                                                                                         │
│                                                                                                                      │
│  How would you like to authenticate for this project?                                                                │
│                                                                                                                      │
│  (selected) Login   (not selected) Use Gemi(not selected)   (not selected) AWS Bedrock   (not selected) OpenAI       │
│  with Google        API Key                Vertex AI        (Claude models)              Compatible APIs             │
│                                                                                                                      │
│  (Use Enter to select)                                                                                               │
│                                                                                                                      │
│  Terms of Services and Privacy Notice for Gemini CLI                                                                 │
│                                                                                                                      │
│  https://github.com/google-gemini/gemini-cli/blob/main/docs/tos-privacy.md                                           │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AuthDialog > Snapshots > renders correctly with enforced auth type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Get started                                                                                                        │
│                                                                                                                      │
│   How would you like to authenticate for this project?                                                               │
│                                                                                                                      │
│   (selected) Use Gemini API Key                                                                                      │
│                                                                                                                      │
│   (Use Enter to select)                                                                                              │
│                                                                                                                      │
│   Terms of Services and Privacy Notice for Gemini CLI                                                                │
│                                                                                                                      │
│   https://github.com/google-gemini/gemini-cli/blob/main/docs/tos-privacy.md                                          │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
